Fix css spacing

--- a/css/main.css
+++ b/css/main.css
@@ -21,3 +21,15 @@ html {
 .push-logo {
   max-width: 200px;
 }
+
+@media only screen and (min-width: 76em) {
+
+  .table-wrapper {
+    overflow: visible;
+  }
+
+}
+
+.table-wrapper table {
+  min-width: 45em;
+}
